--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
 <header>
-<div class="container">
+<div class="container hidden-xs hidden-sm">
 
 <div class="navbar" role="navigation">
 <ul class="nav nav-justified">
