--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 <p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum und nebenbei die Technik im Büro.</a>
 
-<p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
-Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
+<p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann für Live-Sendungen.
+Desweiteren unterstütze ich <a href="https://fsfe.org/about/basics/freesoftware.de.html">Freie Software</a>, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
 Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
 
 <p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und <i>vegan</i>. Auch habe ich nie geraucht, trinke seit 2010 kein Alkohol mehr (davor auch nie viel) und verzichte schon lange auf ungesundes Fastfood. Von daher könnte man mich als <i>Straight Edge</i> bezeichnen. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
@@ -188,7 +188,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 </table>
 
 <footer>
-<p>&copy; 2005 - <script>document.write(new Date().getFullYear())</script><noscript>2014</noscript> davidak
+<p>&copy; 2005 - <script>document.write(new Date().getFullYear())</script><noscript>2015</noscript> davidak
 <a class="pull-right" href="/impressum.html">Impressum</a></p>
 </footer>
 
