--- a/index.html
+++ b/index.html
@@ -194,10 +194,13 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 </div> <!-- #container -->
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<!-- disable tracking -->
+<!-- waiting for new release of fotorama without visitor tracking https://github.com/artpolikarpov/fotorama/commit/fb4145f814fa1b4b25471b0c121d151e306237e4 -->
+<script>
+  blockFotoramaData = true;
+</script>
 <script src="js/fotorama.js"></script>
 
 <script>
