https if possible

--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body style="margin:40px;">
 
 <h1>Impressum</h1>
 <p>Inhaltlich Verantwortlicher gem&auml;&szlig; § 55 Abs. 2 RStV:</p>
@@ -33,10 +33,10 @@ S&auml;mtliche Beitr&auml;ge auf davidak.de dienen sowohl der Unterhaltung als a
 Die Kommentare zu meinen Beitr&auml;gen sollen zur Diskussion anregen und stellen ausdr&uuml;cklich nur die subjektive Meinung des jeweiligen Verfassers dar. Ich behalte mir das Recht vor, Kommentare kommentarlos zu l&ouml;schen.
 
 <h2>Datenschutz</h2>
-<p>Diese Website benutzt <a href="http://de.piwik.org/">Piwik</a>, eine Open Source-Software zur statistischen Auswertung der Besucherzugriffe. Piwik verwendet sog. “Cookies”, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieses Internetangebotes werden auf dem Server des Anbieters in Deutschland gespeichert. Die IP-Adresse wird sofort nach der Verarbeitung und vor deren Speicherung anonymisiert. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich nutzen können.</p>
+<p>Diese Website benutzt <a href="https://de.piwik.org/">Piwik</a>, eine Open Source-Software zur statistischen Auswertung der Besucherzugriffe. Piwik verwendet sog. “Cookies”, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieses Internetangebotes werden auf dem Server des Anbieters in Deutschland gespeichert. Die IP-Adresse wird sofort nach der Verarbeitung und vor deren Speicherung anonymisiert. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich nutzen können.</p>
 
 <h3>Erfassung von Statistiken</h3>
-<iframe frameborder="no" width="100%" max-height="200px" marginwidth="0" marginheight="0" scrolling="no" src="http://davidak.de/stats/index.php?module=CoreAdminHome&action=optOut&language=de"></iframe>
+<iframe frameborder="no" width="100%" max-height="200px" marginwidth="0" marginheight="0" scrolling="no" src="https://davidak.de/stats/index.php?module=CoreAdminHome&action=optOut&language=de"></iframe>
 
 <!-- Piwik -->
 <script type="text/javascript">
@@ -51,7 +51,7 @@ Die Kommentare zu meinen Beitr&auml;gen sollen zur Diskussion anregen und stelle
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//davidak.de/stats/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="https://davidak.de/stats/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 
 </body>
