--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 <div class="navbar" role="navigation">
 <ul class="nav nav-justified">
-  <li><a href="http://davidak.de/wiki">Wiki</a></li>
-  <li><a href="http://davidak.de/blog">Weblog</a></li>
+  <li><a href="https://davidak.de/wiki">Wiki</a></li>
+  <li><a href="https://davidak.de/blog">Weblog</a></li>
   <li>
   <div class="navbar-center"><img src="logo.png" alt="davidak logo" class="img-circle brand"></div>
   <div class="navbar-est">seit 2005</div>
   </li>
-  <li><a href="http://www.flickr.com/photos/davidak">Fotos</a></li>
-  <li><a href="http://www.youtube.com/user/d4v1d4k">Videos</a></li>
+  <li><a href="https//www.flickr.com/photos/davidak">Fotos</a></li>
+  <li><a href="https//www.youtube.com/user/d4v1d4k">Videos</a></li>
 </ul>
 </div>
 
@@ -94,7 +94,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
       <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
       <div class="caption">
         <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
+        <p>Ein Fanvideo zur Sendung <a href="https://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
       </div>
     </div>
 </div>
@@ -125,7 +125,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 <div class="col-md-4">
      <div class="thumbnail">
-      <a href="http://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
+      <a href="https://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
       <div class="caption">
         <h3>GNA Clan</h3>
         <p>Webseite und Game-Server für den GNA Clan.</p>
@@ -135,7 +135,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 <div class="col-md-4">
      <div class="thumbnail">
-      <a href="http://davidak.de/random-graph/"><img src="Random-Graph.jpg" alt="Random Graph"></a>
+      <a href="https://davidak.de/random-graph/"><img src="Random-Graph.jpg" alt="Random Graph"></a>
       <div class="caption">
         <h3>Random Graph</h3>
         <p>Echtzeit Graph mit zufälligen Daten.</p>
@@ -145,7 +145,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 <div class="col-md-4">
     <div class="thumbnail">
-      <a href="http://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
+      <a href="https://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
       <div class="caption">
         <h3>Satzgenerator</h3>
         <p>Zufällige Sätze generieren, bewerten und teilen.</p>
@@ -169,20 +169,20 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
     <td>Die Python-Bibliothek PyZufall beinhaltet diverse Funktionen für das Generieren zufälliger Daten.</td>
   </tr>
   <tr>
-    <th><a href="http://davidak.de/personen/">Personendatenbank</a></th>
-    <td>Daten von über 10.000 Personen. Zufällig generiert mit einem <a href="http://davidak.de/wiki/perl/personendatengenerator">Perl-Script</a>.</td>
+    <th><a href="https://davidak.de/personen/">Personendatenbank</a></th>
+    <td>Daten von über 10.000 Personen. Zufällig generiert mit einem <a href="https://davidak.de/wiki/perl/personendatengenerator">Perl-Script</a>.</td>
   </tr>
   <tr>
-    <th><a href="http://davidak.de/wiki/perl/namengenerator">Namengenerator</a></th>
+    <th><a href="https://davidak.de/wiki/perl/namengenerator">Namengenerator</a></th>
     <td>Ein Perl-Script, um Namen zu generieren.</td>
   </tr>
 
   <tr>
     <th><a href="https://github.com/davidak/python-peniscoin-miner">Peniscoin Miner</a></th>
-    <td>Eine Parodie auf <a href="http://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="http://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
+    <td>Eine Parodie auf <a href="https://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="https://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
   </tr>
   <tr>
-    <th><a href="http://owncloud.org/">ownCloud</a></th>
+    <th><a href="https://owncloud.org/">ownCloud</a></th>
     <td>Freie Software zum Synchronisieren und Teilen von Dateien. Ich habe durch Testen und über 60 Bugreports dazu beigetragen.</td>
   </tr>
 </table>
@@ -215,14 +215,14 @@ $(function () {
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//davidak.de/stats/";
+    var u="https://davidak.de/stats/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', 1]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//davidak.de/stats/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="https://davidak.de/stats/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 
 </body>
