--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <div class="navbar-center"><img src="logo.png" alt="davidak logo" class="img-circle brand"></div>
   <div class="navbar-est">seit 2005</div>
   </li>
-  <li><a href="https//www.flickr.com/photos/davidak">Fotos</a></li>
-  <li><a href="https//www.youtube.com/user/d4v1d4k">Videos</a></li>
+  <li><a href="https://www.flickr.com/photos/davidak">Fotos</a></li>
+  <li><a href="https://www.youtube.com/user/d4v1d4k">Videos</a></li>
 </ul>
 </div>
 
