text improvements and pgp publickey

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke s
 
 <p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und <i>vegan</i>. Auch habe ich nie geraucht, trinke seit 2010 kein Alkohol mehr (davor auch nie viel) und verzichte schon lange auf ungesundes Fastfood. Von daher könnte man mich als <i>Straight Edge</i> bezeichnen. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
-<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, Permakultur, Survival, Bushcraft, Umweltschutz, Tierschutz, GeoCaching, Urban Exploration, Klettern, Parkour, Luzides Träumen, Esperanto (Sprache), Künstliche Intelligenz, Mesh-Netzwerke, P2P, Zero Knowledge-Systeme, Kryptographie, Bühnentechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
+<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, Permakultur, Selbstversorgung, Survival, Bushcraft, Umweltschutz, Tierschutz, GeoCaching, Urban Exploration, Klettern, Parkour, Luzides Träumen, Esperanto (Sprache), Künstliche Intelligenz, Mesh-Netzwerke, P2P, Zero Knowledge-Systeme, Kryptographie, 3D-Modellierung und -Animation, Bühnentechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
-<p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
+<p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, Natur, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
 </div>
 
 <div class="col-md-6">
@@ -78,7 +78,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 <p class="text-center">
   <b>E-Mail: </b>post at davidak.de<br>
-  <b>PGP: </b><a href="gpg-pubkey-davidak.asc">B60197B0</a><br>
+  <b>PGP: </b><a href="pgp-publickey-davidak.asc">B60197B0</a><br>
   <!--oder <a href="#">Kontaktformular</a> gibt es noch nicht :\ -->
 </p>
 
