--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
   <img src="davidak-Foto-2.jpg" alt="Foto von davidak">
   <img src="davidak-Foto-3.jpg" alt="Foto von davidak">
   <img src="davidak-Foto-4.jpg" alt="Foto von davidak">
+  <img src="davidak-Foto-5.jpg" alt="Foto von davidak">
 </div>
 
 <br>
