small improvements, delete ownCloud

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +22,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body>
 
 <header>
@@ -51,13 +49,13 @@
 <div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
-<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum und nebenbei die Technik im Büro.</a>
+<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 200 Linux-Server im Rechenzentrum und nebenbei die Technik im Büro.</a>
 
 <p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann für Live-Sendungen.
 Desweiteren unterstütze ich <a href="https://fsfe.org/about/basics/freesoftware.de.html">Freie Software</a>, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
 Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
 
-<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und <i>vegan</i>. Auch habe ich nie geraucht, trinke seit 2010 kein Alkohol mehr (davor auch nie viel) und verzichte schon lange auf ungesundes Fastfood. Von daher könnte man mich als <i>Straight Edge</i> bezeichnen. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
+<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>kohlenhydratreich</i>, <i>fettarm</i> und <i>rein pflanzlich</i> (vegan). Auch habe ich nie geraucht, trinke seit 2010 kein Alkohol mehr (davor auch nie viel) und verzichte schon lange auf ungesundes Fastfood. Von daher könnte man mich als <i>Straight Edge</i> bezeichnen. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
 <p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, Permakultur, Selbstversorgung, Survival, Bushcraft, Umweltschutz, Tierschutz, GeoCaching, Urban Exploration, Klettern, Parkour, Luzides Träumen, Esperanto (Sprache), Künstliche Intelligenz, Mesh-Netzwerke, P2P, Zero Knowledge-Systeme, Kryptographie, 3D-Modellierung und -Animation, Bühnentechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
@@ -181,10 +179,6 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
   <tr>
     <th><a href="https://github.com/davidak/python-peniscoin-miner">Peniscoin Miner</a></th>
     <td>Eine Parodie auf <a href="https://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="https://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
-  </tr>
-  <tr>
-    <th><a href="https://owncloud.org/">ownCloud</a></th>
-    <td>Freie Software zum Synchronisieren und Teilen von Dateien. Ich habe durch Testen und über 60 Bugreports dazu beigetragen.</td>
   </tr>
 </table>
 
