--- a/index.html
+++ b/index.html
@@ -156,8 +156,12 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 
 <table class="table table-striped">
   <tr>
+    <th><a href="https://media.ccc.de/b/congress">Chaos Communication Congress/Camp</a></th>
+    <td>Kameramann und Regie/Bildmischer bei vielen Vorträgen. Live gestreamt ins Internetz.</td>
+  </tr>
+  <tr>
     <th><a href="http://concert.arte.tv/de/collections/moers-festival-2014">Moers Festival 2014</a></th>
-    <td>Kameramann bei fast allen Bands und auch einmal Regie/Bildmischer.</td>
+    <td>Kameramann bei fast allen Bands und auch einmal <a href="https://youtu.be/ZTOrPhqwkA8">Regie/Bildmischer</a>. Live bei ARTE.</td>
   </tr>
   <tr>
     <th><a href="https://github.com/davidak/random-vcard-generator">Random VCard-Generator</a></th>
