conf.py cleanup and improvements, better license declaration, index cleanup

--- a/pages/startseite.html
+++ b/pages/startseite.html
@@ -1,10 +1,10 @@
-.. title: davidak
-.. hidetitle: True
+.. title: davidak.de
 .. slug: index
 .. date: 2016-02-28 23:24:45 UTC+01:00
 .. tags: 
-.. description: 
+.. description: Die private Webseite von davidak.
 .. type: text
+.. hidetitle: True
 .. pretty_url: False
 .. nocomments: True
 
